Update entities interface and added entities transformers

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require": {
         "fei/entities": "^1.0",
         "fei/context": "^1.0",
-        "doctrine/common": "^2.6"
+        "doctrine/common": "^2.6",
+        "league/fractal": "^0.14.0"
     },
     "require-dev": {
         "codeception/codeception": "^2.2"
