add token attribute to protect room

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "commercial",
     "authors": [
         {
-            "name": "apa-oc",
-            "email": "apa@opcoding.eu"
+            "name": "vsi",
+            "email": "v.simonin@redspher.com"
         }
     ],
     "repositories": [
